--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Dynamic table</title>
   </head>
   <body>
+    <h2>Registration form</h2>
     <div class="container">
       <div class="input">
         NAME:
         <input type="text" id="name" placeholder="shruti mishra" />
       </div>
       <div class="input">
-        E-MAIL:
+        EMAIL:
         <input type="text" id="email"  placeholder="email" />
       </div>
       <div class="input">
