--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <input type="text" id="name" placeholder="shruti mishra" />
       </div>
       <div class="input">
+        Phone no:
+        <input type="number" id="no"  placeholder="no" />
+      </div>
+      <div class="input">
         EMAIL:
         <input type="text" id="email"  placeholder="email" />
       </div>
